# burrito

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  build.rs  local-rpcs.ipynb
.github/workflows/: rust.yml
az-queues/: Cargo.toml
az-queues/src/: lib.rs
batcher/: Cargo.toml
batcher/src/: lib.rs
bertha/: Cargo.toml
bertha-attr/: Cargo.toml
bertha-attr/src/: lib.rs
bertha-attr/tests/: test1.rs
bertha/examples/: echo.rs
bertha/src/: and_then_concurrent.rs  atmostonce.rs  bincode.rs  chan_transport.rs  either.rs  inherit.rs  lib.rs  negotiate.rs  reliable.rs  select.rs  semantics.rs  split.rs  tagger.rs  tcp.rs  udp.rs  uds.rs  util.rs
bertha/src/negotiate/: apply.rs  client.rs  get_offers.rs  inject_with_channel.rs  mod.rs  negotiate_picked.rs  pick.rs  rendezvous.rs  server.rs
burrito-addr/: Cargo.toml  build.rs
burrito-addr/src/: bincode.rs  conn.rs  flatbuf.rs  lib.rs  staticnet.rs  tonic.rs  uri.rs
burrito-ctl/: Cargo.toml  build.rs
burrito-ctl/src/: burrito_net.rs  docker_proxy.rs  lib.rs  static_net.rs
burrito-discovery-ctl/: Cargo.toml
burrito-discovery-ctl/src/: client.rs  ctl.rs  lib.rs  proto.rs
burrito-flatbuf/: Cargo.toml  build.rs
burrito-flatbuf/src/: lib.rs
burrito-localname-ctl/: Cargo.toml
burrito-localname-ctl/src/: client.rs  ctl.rs  docker_proxy.rs  fused_tls_fastpath.rs  lib.rs  proto.rs  runtime-fastpath.rs  runtime_fastpath.rs  static_fastpath.rs
burrito-route-ctl/: Cargo.toml
burrito-route-ctl/src/: burrito_net.rs  lib.rs
burrito-shard-ctl/: Cargo.toml
burrito-shard-ctl/src/: client.rs  ebpf.rs  lib.rs  proto.rs  redis_util.rs  server.rs  shard_raw.rs  static_client.rs
burrito-shard-ctl/tests/: shardctl.rs
burrito-util/: Cargo.toml
burrito-util/src/: lib.rs
cx-list-opt/: Cargo.toml
cx-list-opt-test/: Cargo.toml
cx-list-opt-test/src/: main.rs
cx-list-opt/src/: lib.rs
dpdk-direct/: Cargo.toml
dpdk-direct/examples/: bertha-ping.rs  inline_chunnel.rs  switch_datapath.rs
dpdk-direct/src/: dpdk_inline.rs  dpdk_iokernel.rs  lib.rs
dpdk-direct/src/dpdk_inline/: dpdk_state.rs  mod.rs
dpdk-direct/src/switcher/: connection.rs  migrator.rs  mod.rs  stream.rs
dpdk-direct/src/switcher_lock/: connection.rs  mod.rs
dpdk-direct/src/switcher_lockfree/: migrator.rs  mod.rs  stream.rs
echo-test/: Cargo.toml
echo-test/src/: main.rs
elk-app-logparser/: Cargo.toml
elk-app-logparser/examples/: pubsub.rs  shard_encryption.rs
elk-app-logparser/src/: connect.rs  lib.rs  listen.rs  main.rs  parse_log.rs  publish_subscribe.rs
find-calls/: Cargo.toml
find-calls/src/: lib.rs
find-calls/tests/: basic.rs
gcp-pubsub/: Cargo.toml
gcp-pubsub/src/: lib.rs
kafka/: Cargo.toml
kafka/src/: lib.rs
kv-dpdk/: Cargo.toml
kvstore/: Cargo.toml  build.rs
kvstore-ycsb/: Cargo.toml  build.rs
kvstore-ycsb/benches/: ycsb.rs
kvstore-ycsb/src/: lib.rs
kvstore/.cargo/: config
kvstore/src/: bin.rs  client.rs  kv.rs  lib.rs  msg.rs  opt.rs  reliability.rs  server.rs
kvstore/src/server/: mod.rs  serve_lb.rs  single_shard.rs  udp_to_shard.rs
kvstore/tests/: udp.rs
latency-bench/: Cargo.toml
latency-bench/src/: main.rs
negotiation-bench/: Cargo.toml
negotiation-bench/src/: main.rs
proto/: burrito.fbs  burrito.proto
queue-steer/: Cargo.toml
queue-steer/src/: aws.rs  azure.rs  bin_help.rs  gcp.rs  kafka_ch.rs  lib.rs  set_group.rs
quic-chunnel/: Cargo.toml
quic-chunnel/src/: lib.rs
rdma-chunnel/: Cargo.toml
rdma-chunnel/src/: lib.rs
redis-basechunnel/: Cargo.toml
redis-basechunnel/src/: lib.rs  pollentry.lua  transition.lua  tryinit.lua
resolv-go/: Makefile  burrito.go  go.mod  go.sum
resolv-go/proto/: burrito.pb.go
round-order/: Cargo.toml
round-order/src/: lib.rs
rpcbench/: Cargo.toml  build.rs
rpcbench/examples/: udpclient.rs
rpcbench/proto/: ping.proto
rpcbench/src/: lib.rs
rpcbench/tests/: local_ping.rs
scripts/: bincode-rpcbench-local.sh  datapath-swap.ipynb  datapath-swap.py  elk-app.py  exp_max.py  hdrcat.py  install-docker.sh  install-kv-deps.sh  install-mlx5.sh  kv-config-extra.toml  kv-config.toml  kv-dpdk-config.toml  kv-lb.py  kv-lb.toml  kv-overheads.toml  kv-shenango-cloudlab.toml  kv-shenango-config.toml  kv-shenango.ipynb  kv-shenango.py  kv-trace.ipynb  kv-udp.R  kv.R  kv.ipynb  kv.py  latency-bench.ipynb  latency-bench.py  latency-bench.toml  local-fastpath.ipynb  local-fastpath.py  localcn.py  negotiation-bench.ipynb  negotiation-bench.py  pktsize-tput.toml  pubsub-tput.ipynb  reconfig.toml  requirements.txt  rpcbench-anycast.sh  rpcbench-exp.sh  rpcbench-local-bincode.sh  rpcbench-local.sh  (+20 more)
scripts/elk-app/: elk-encr.ipynb  elk-numparsers.ipynb  elk-service.ipynb  elk.ipynb  exp.toml  kafka-deployment.yml  kafka-remote-deployment.yml  redis.yaml  run-redis-and-kafka.py
shenango-bertha/: Cargo.toml  build.rs
shenango-bertha/src/: lib.rs
shenango-chunnel/: Cargo.toml  build.rs  client.config
shenango-chunnel/.cargo/: config
shenango-chunnel/examples/: bertha-ping.rs  echo.rs  shenango-ping.rs
shenango-chunnel/src/: lib.rs
sqs/: Cargo.toml
sqs/src/: besteffort.rs  fut_with_string.rs  lib.rs  ordered.rs
src/: burrito_net.rs  docker_proxy.rs  lib.rs
static-test/: Cargo.toml
static-test/benches/: unix_ping.rs
static-test/src/: main.rs
tcp/: Cargo.toml
tcp/src/: lib.rs
test-util/: Cargo.toml
test-util/src/: lib.rs
throughput-bench/: Cargo.toml  build.rs
throughput-bench/src/: dpdk_inline_raw.rs  kernel_tcp_raw.rs  main.rs  shenango_raw.rs  shenangort.rs  using_chunnel_connection.rs
tls-tunnel/: Cargo.toml
tls-tunnel/src/: ghostunnel.rs  lib.rs  rustls.rs
tls-tunnel/src/ghostunnel/: mod.rs
xdp-shard/: Cargo.toml  build.rs
xdp-shard/examples/: shard.rs  udpclient.rs
xdp-shard/src/: bindings.rs  fnv.h  handles.rs  lib.rs  libbpf.rs  stats.rs  xdp_port.c  xdp_port.h  xdp_shard.c  xdp_shard.h  xdp_shard_egress.c  xdp_shard_ingress.c
ycsb-shenango/: Cargo.toml  client.config
ycsb-shenango/src/: main.rs
