[workspace]

members = [
    "bertha",
    "batcher",
    "burrito-localname-ctl",
    "burrito-shard-ctl",
    "kvstore",
    "kvstore-ycsb",
    "rpcbench",
    "shenango-chunnel",
    "test-util",
    "xdp-shard",
    "az-queues",
    "gcp-pubsub",
    "sqs",
    "kafka",
    "queue-steer",
    "round-order",
    "redis-basechunnel",
    "tls-tunnel",
    "negotiation-bench",
    "cx-list-opt",
    "cx-list-opt-test",
]

[profile.release]
#debug = true
lto = true

[profile.release.package.kvstore]
debug = true
