[workspace]

members = [
    "bertha",
    "shenango-bertha",
    "burrito-localname-ctl",
    "burrito-shard-ctl",
    "kvstore",
    "kvstore-ycsb",
    "rpcbench",
    "shenango-chunnel",
    "dpdk-direct",
    "test-util",
    "xdp-shard",
    "az-queues",
    "gcp-pubsub",
    "sqs",
    "kafka",
    "queue-steer",
    "redis-basechunnel",
    "tls-tunnel",
    "negotiation-bench",
    "latency-bench",
    "throughput-bench",
    "cx-list-opt",
    "cx-list-opt-test",
]

[profile.release]
#debug = true
lto = true

[profile.release.package.kvstore]
debug = true
