[workspace]

members = [
    "bertha",
    "shenango-bertha",
    "burrito-localname-ctl",
    "burrito-shard-ctl",
    "kvstore",
    "kvstore-ycsb",
    "rpcbench",
    "shenango-chunnel",
    "dpdk-direct",
    "kv-dpdk",
    "test-util",
    "xdp-shard",
    "az-queues",
    "gcp-pubsub",
    "sqs",
    "kafka",
    "queue-steer",
    "redis-basechunnel",
    "tls-tunnel",
    "tcp",
    "quic-chunnel",
    "negotiation-bench",
    "latency-bench",
    "throughput-bench",
    "cx-list-opt",
    "cx-list-opt-test",
]

[profile.release]
debug = true
lto = true
