[package]
name = "az-queues"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
bertha = { path = "../bertha" }
tokio = { version = "1", features = [] }
color-eyre = "0.6"
tracing = { version = "0.1" }
tracing-futures = "0.2"
futures-util = "0.3"
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "14ff932", features = ["queue"] }
reqwest = "0.11"

[dev-dependencies]
tracing-subscriber = "0.2"
tracing-error = "0.1"
