[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
futures-util = "0.3"
tracing = { version = "0.1" }
tracing-futures = "0.2"
color-eyre = "=0.5.7"
tokio = { version = "^1.10", features = ["sync"] }
hdrhistogram = "7"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
rand = "0.7"
