[package]
name = "bertha"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["rt", "sync", "time", "macros", "net"] }
tokio-stream = "0.1"
color-eyre = "0.6"
futures-util = "0.3"
tracing = { version = "0.1" }
tracing-futures = "0.2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
bincode = "1"
pin-project = "1"
dashmap = "3"
ahash = "0.8"
hdrhistogram = "7"
base64 = "0.13"
flume = "0.10"

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
paste = "1"
