[package]
name = "burrito-addr"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
burrito-route-ctl = {path = "../burrito-route-ctl"}
burrito-flatbuf = {path = "../burrito-flatbuf"}
burrito-util = {path = "../burrito-util"}
bytes = "0.4"
failure = "0.1"
futures-util = "0.3"
hex = "0.4"
hyper-unix-connector = "0.1.4"
hyper = {version = "0.13", features = ["stream"]}
pin-project = "0.4"
prost = "0.6"
prost-derive = "0.6"
tokio = {version = "0.2.11", features = ["full"]}
tonic = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "=0.1.6"

[build-dependencies]
tonic-build = "0.1"
