[package]
name = "burrito-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
bollard = "0.4"
bytes = "0.4"
ctrlc = "3.1.3"
failure = "0.1"
futures-util = "0.3"
hyper-unix-connector = "0.1.3"
hyper = {version = "0.13", features = ["stream"]}
lazy_static = "1"
prost = "0.6"
prost-derive = "0.6"
rand = "0.7"
redis = "0.15"
regex = "1"
serde  = { version = "1", features = ["derive"]}
serde_json = "1"
slog = "2"
slog-async = "2"
slog-term = "2"
structopt = "0.3"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.1"
tower = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-timing  = "0.3"

[build-dependencies]
tonic-build = "0.1"
