[package]
name = "burrito-discovery-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
ctl = ["client", "redis", "tokio/time", "tokio/uds", "tokio/rt-core", "ctrlc"]
client = ["bincode", "async-bincode", "futures-util", "tracing", "tokio/uds"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }
redis = { version = "0.15", optional = true }
tokio = { version = "0.2", optional = true }
async-bincode = { version = "0.5", optional = true }
ctrlc = { version = "3.1.3", optional = true }
#structopt = { version = "0.3", optional = true }
#tracing-subscriber = { version = "0.2", optional = true }
