[package]
name = "burrito-flatbuf"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burrito-util = { path = "../burrito-util" }
flatbuffers = "0.6"

[build-dependencies]
flatc-rust = "0.1"
