[package]
name = "burrito-localname-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
docker = ["bollard", "serde_json", "hyper", "lazy_static", "hyper-unix-connector", "regex"]
ctl = ["ctrlc", "structopt", "rand", "burrito-util", "tracing-subscriber"]

[dependencies]
bertha = { path = "../bertha" }
burrito-discovery-ctl = { path = "../burrito-discovery-ctl" }
async-bincode = "0.5"
bincode = "1"
tokio-tower = "0.3.5"
tokio = {version = "0.2", features = ["sync", "rt-core", "rt-threaded", "uds"]}
tower-service = "0.3"
tracing = "0.1"
failure = "0.1"
color-eyre = "0.4"
eyre = "0.6"
serde  = { version = "1", features = ["derive"]}
slog = "2"
futures-util = { version = "0.3" }
tracing-subscriber = { version = "0.2", optional = true }
hyper-unix-connector = { version = "0.1.3", optional = true }
lazy_static = { version = "1", optional = true }
ctrlc = { version = "3.1.3", optional = true }
burrito-util = { path = "../burrito-util", optional = true }
rand = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }
bollard = { version = "0.4", optional = true }
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
hyper = {version = "0.13", features = ["stream"], optional = true }

[[bin]]
name = "burrito-localname"
required-features = ["ctl", "docker"]

[[bin]]
name = "dump-docker"
required-features = ["docker"]
