[package]
name = "burrito-localname-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
default = []
docker = ["bollard", "serde_json", "hyper", "lazy_static", "hyper-unix-connector", "regex", "tracing-subscriber"]
ctl = ["ctrlc", "structopt", "rand", "tracing-subscriber"]

[dependencies]
bertha = { path = "../bertha" }
bincode = "1"
tracing = "0.1"
color-eyre = "0.5"
serde  = { version = "1", features = ["derive"]}
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["sync", "time"] }
async-bincode = "0.6"
tokio-tower = "0.5"
tower-service = "0.3"
tracing-subscriber = { version = "0.2", optional = true }
hyper-unix-connector = { version = "0.1.3", optional = true }
lazy_static = { version = "1", optional = true }
ctrlc = { version = "3.1.3", optional = true }
rand = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }
bollard = { version = "0.4", optional = true }
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
hyper = {version = "0.13", features = ["stream"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-error = "0.1"

[[bin]]
name = "burrito-localname"
required-features = ["ctl", "docker"]

[[bin]]
name = "dump-docker"
required-features = ["docker"]
