[package]
name = "burrito-localname-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
default = []
ctl = ["tokio/rt-multi-thread", "tokio-stream", "tokio-stream", "ctrlc", "structopt", "rand", "tracing-subscriber", "tracing-error", "tracing-futures"]

[dependencies]
bertha = { path = "../bertha" }
bincode = "1"
tracing = "0.1"
color-eyre = "0.5"
serde  = { version = "1", features = ["derive"]}
futures-util = { version = "0.3" }
pnet = "0.27"
tokio = { version = "1", features = ["sync", "time"] }
async-bincode = "0.6"
tokio-tower = "0.5"
tower-service = "0.3"
tokio-stream = { version = "0.1", features = ["net"], optional = true }
tracing-error = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
ctrlc = { version = "3.1.3", optional = true }
rand = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
test-util = { path = "../test-util" }

[[bin]]
name = "burrito-localname"
required-features = ["ctl"]
