[package]
name = "burrito-shard-ctl"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
default = []
ebpf = ["xdp-shard/ebpf"]

[dependencies]
bertha = { path = "../bertha" }
xdp-shard = { path = "../xdp-shard", optional = true }
color-eyre = "0.5"
bincode = "1"
tracing = "0.1"
tracing-futures = "0.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time"] }
redis = { version = "0.19", default-features = false, features = ["aio", "tokio-comp"] }

[dev-dependencies]
test-util = { path = "../test-util" }
tokio = { version = "1", features = ["rt"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
