[package]
name = "burrito-util"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
failure = "0.1"
tokio = {version = "0.2", features = ["full"]}
tracing = "0.1"
tracing-futures = "0.2"
