[package]
name = "dpdk-direct"
version = "0.1.0"
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
dpdk-wrapper = { path = "./dpdk-wrapper" }
tracing = "0.1"
tracing-futures = "0.2"
color-eyre = "0.5"
flume = "0.10"
futures-util = "0.3"
lazy_static = "1"
eui48 = "1"
ahash = "0.7"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
structopt = "0.3"
