[package]
name = "dpdk-direct"
version = "0.1.0"
edition = "2021"

[features]
default = ["switcher_lockfree"]
cx3_mlx = ["dpdk-wrapper/cx3_mlx"]
cx4_mlx = ["dpdk-wrapper/cx4_mlx"]
xl710_intel = ["dpdk-wrapper/xl710_intel"]
switcher_lock = []
switcher_lockfree = []

[dependencies]
bertha = { path = "../bertha" }
dpdk-wrapper = { path = "./dpdk-wrapper" }
tracing = "0.1"
tracing-futures = "0.2"
color-eyre = "0.6"
tokio = { version = "1", features = ["rt"] }
flume = "0.10"
futures-util = "0.3"
lazy_static = "1"
macaddr = "1"
ahash = "0.8"
quanta = "0.10"
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
structopt = "0.3"
rand = "0.8"

[[example]]
name = "switch_datapath"
required-features = ["switcher_lock", "switcher_lockfree"]
