[package]
name = "echo-test"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
default = []
use-shenango = ["shenango-chunnel"]

[dependencies]
tokio = {version = "0.3", features = ["rt-multi-thread", "sync", "macros"]}
color-eyre = "0.5"
futures-util = "0.3"
bertha = { path = "../bertha" }
shenango-chunnel = { path = "../shenango-chunnel", optional = true }
structopt = { version = "0.3" }
ctrlc = { version = "3" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-error = "0.1"
tracing-timing  = { version = "0.4", features = ["layer"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
