[package]
name = "elk-app-logparser"
version = "0.1.0"
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
queue-steer = { path = "../queue-steer"  }
gcp-pubsub = { path = "../gcp-pubsub" }
kafka = { path = "../kafka" }
redis-basechunnel = { path = "../redis-basechunnel" }
burrito-shard-ctl = { path = "../burrito-shard-ctl" }
quic-chunnel = { path = "../quic-chunnel" }
tcp = { path = "../tcp" }
common-log-format = { git = "https://github.com/akshayknarayan/common-log-format", branch = "main" }
tls-tunnel = { path = "../tls-tunnel", features = ["rustls"] }
burrito-localname-ctl = { path = "../burrito-localname-ctl", default-features=false, features = ["ctl", "runtime"] }
rcgen = { version = "0.10.0", features = ["pem"] }
tempfile = "3"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
quiche = "0.17.1"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "sync", "time", "signal", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
futures-util = "0.3"
structopt = "0.3"
itertools = "0.11"
hdrhistogram = "7"
