[package]
name = "gcp-pubsub"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
bertha = { path = "../bertha" }
tokio = { version = "1", features = [] }
color-eyre = "=0.5.7"
tracing = { version = "0.1" }
tracing-futures = "0.2"
futures-util = "0.3"
google-cloud = { git = "https://github.com/akshayknarayan/google-cloud-rs", features = ["pubsub"] }
chrono = "0.4"
