[package]
name = "gcp-pubsub"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
queue-steer = { path = "../queue-steer" }
tokio = { version = "1", features = [] }
color-eyre = "0.6"
tracing = { version = "0.1" }
tracing-futures = "0.2"
futures-util = "0.3"
google-cloud = { git = "https://github.com/akshayknarayan/google-cloud-rs", features = ["pubsub"] }
chrono = "0.4"
rand = "0.8"
serde_json = "1"
serde = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
