[package]
name = "kafka"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
tokio = { version = "1", features = [] }
rdkafka = "0.26"
color-eyre = "0.6"
tracing = { version = "0.1" }
tracing-futures = "0.2"
futures-util = "0.3"
rand = "0.8"
base64 = "0.13"
serde = "1"

[dev-dependencies]
tracing-subscriber = "0.2"
tracing-error = "0.2"
