[package]
name = "kvstore-ycsb"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
bertha = { path = "../bertha" } 
burrito-shard-ctl = {path = "../burrito-shard-ctl"}
kvstore = {path = "../kvstore"}
futures-util = "0.3"
structopt = "0.3"
tokio = {version = "0.3", features = ["rt", "rt-multi-thread", "macros"] }
poisson-ticker = { git = "https://github.com/akshayknarayan/poisson-ticker", branch="debug" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-timing  = "0.4"
tracing-error  = "0.1"
bincode = "1"
color-eyre = "0.5"
