[package]
name = "kvstore-ycsb"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[features]
default = []

[dependencies]
bertha = { path = "../bertha" } 
burrito-shard-ctl = { path = "../burrito-shard-ctl" }
kvstore = { path = "../kvstore", features = ["bin-helper"] }
futures-util = "0.3"
structopt = "0.3"
tokio = {version = "1", features = ["rt", "macros"] }
poisson-ticker = { git = "https://github.com/akshayknarayan/poisson-ticker", branch="master" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-timing  = "0.5"
tracing-error  = "0.1"
color-eyre = "0.5"
shenango-chunnel = { path = "../shenango-chunnel" }
dpdk-direct = { path = "../dpdk-direct" }
quanta = "0.10"
