[package]
name = "kvstore"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
default = []
bin = ["tracing-subscriber", "tracing-timing", "structopt", "ctrlc", "tokio/rt-multi-thread", "tracing/release_max_level_trace"]
use-shenango = ["shenango-chunnel"]

[dependencies]
bertha = { path = "../bertha" }
bertha-attr = { path = "../bertha-attr" }
burrito-shard-ctl = { path = "../burrito-shard-ctl" }
color-eyre = "0.5"
futures-util = "0.3"
dashmap = "3"
rand = "0.7"
serde  = { version = "1", features = ["derive"]}
tokio = {version = "0.3", features = ["rt", "sync", "macros"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-error = "0.1"
structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-timing  = { version = "0.4", features = ["layer"], optional = true }
ctrlc = { version = "3", optional = true }
shenango-chunnel = { path = "../shenango-chunnel", optional = true }

[dev-dependencies]
test-util = { path = "../test-util" }
tracing-subscriber = "0.2"
bincode = "1"

[[bin]]
name = "kvserver"
required-features = ["bin"]
