[package]
name = "kvstore"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[features]
default = []
bin = ["bin-helper", "structopt", "tokio/rt-multi-thread", "tokio/fs", "num_cpus"]
bin-helper = ["tracing-subscriber", "tracing-timing", "ctrlc"]
ebpf = ["burrito-shard-ctl/ebpf"]
cx3_mlx = ["dpdk-direct?/cx3_mlx"]
xl710_intel = ["dpdk-direct?/xl710_intel"]

[dependencies]
bertha = { path = "../bertha" }
burrito-shard-ctl = { path = "../burrito-shard-ctl" }
color-eyre = "0.6"
futures-util = "0.3"
and-then-concurrent = "0.1"
dashmap = "3"
rand = "0.7"
serde  = { version = "1", features = ["derive"]}
tokio = {version = "1", features = ["rt", "sync", "macros"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-error = "0.1"
flume = "0.10"
structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-timing  = { version = "0.6", features = ["layer"], optional = true }
ctrlc = { version = "3", optional = true }
num_cpus = { version = "1", optional = true }
shenango-chunnel = { path = "../shenango-chunnel", optional = true }
dpdk-direct = { path = "../dpdk-direct", optional = true }

[dev-dependencies]
test-util = { path = "../test-util" }
tracing-subscriber = "0.2"
bincode = "1"

[[bin]]
name = "kvserver"
required-features = ["bin"]

[[bin]]
name = "burrito-lb"
required-features = ["bin"]

[[bin]]
name = "single-shard"
required-features = ["bin"]
