[package]
name = "latency-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
dpdk-direct = { path = "../dpdk-direct" }
dpdk-wrapper = { path = "../dpdk-direct/dpdk-wrapper" }
shenango-chunnel = { path = "../shenango-chunnel" }
shenango = { path = "../shenango-chunnel/caladan/bindings/rust" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-error = "0.2"
tracing-futures = "0.2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
structopt = "0.3"
futures-util = "0.3"
flume = "0.10"
