[package]
name = "negotiation-bench"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
test-util = { path = "../test-util" }
color-eyre = "0.6"
futures-util = "0.3"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
redis = { version = "0.20", default-features = false, features = ["aio", "tokio-comp"] }
redis-basechunnel = { path = "../redis-basechunnel" }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
