[package]
name = "queue-steer"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[features]
bin = ["structopt", "tracing-subscriber", "tracing-error"]

[dependencies]
sqs = { path = "../sqs" }
gcp-pubsub = { path = "../gcp-pubsub" }
az-queues = { path = "../az-queues" }
kafka = { path = "../kafka" }
bertha = { path = "../bertha" }
futures-util = "0.3"
base64 = "0.13"
color-eyre = "=0.5.7"
tracing = "0.1"
tracing-futures = "0.2"
rand = "0.7"
serde = "1"
redis = { version = "0.20", default-features = false, features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["macros", "sync"] }
tracing-error = { version = "0.1", optional = true }
structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[[bin]]
name = "bench2"
required-features = ["bin"]
