[package]
name = "queue-steer"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2021"

[features]
bin = ["structopt", "tracing-subscriber", "tracing-error", "redis-basechunnel"]
azure = ["az-queues"]

[dependencies]
bertha = { path = "../bertha" }
sqs = { path = "../sqs", optional = true }
az-queues = { path = "../az-queues", optional = true }
redis-basechunnel = { path = "../redis-basechunnel" , optional = true }
futures-util = "0.3"
base64 = "0.13"
color-eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
rand = "0.8"
serde = "1"
tokio = { version = "1", features = ["macros", "sync"] }
tracing-error = { version = "0.1", optional = true }
structopt = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[[bin]]
name = "bench2"
required-features = ["bin"]

[[bin]]
name = "transition"
required-features = ["bin"]
