[package]
name = "quic-chunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
bertha = { path = "../bertha" }
tcp = { path = "../tcp" }
quiche = "0.17.1"
tokio = { version = "1", features = ["sync"] }
serde = "1"
color-eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
futures-util = "0.3"
tempfile ="3"

[dev-dependencies]
rcgen = { version = "0.10.0", features = ["pem"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
