[package]
name = "redis-basechunnel"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
redis = { version = "0.20", default-features = false, features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["sync"] }
bertha = { path = "../bertha" }
futures-util = "0.3"
color-eyre = "=0.5.7"
tracing = "0.1"
tracing-futures = "0.2"
bincode = "1"
rand = "0.7"

[dev-dependencies]
test-util = { path = "../test-util" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
