[package]
name = "redis-basechunnel"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

[dependencies]
# cargo version as of 0.20.1 has a bug. Patch with this fork until https://github.com/mitsuhiko/redis-rs/pull/486 is merged and there's a release with that fix.
redis = { git = "https://github.com/akshayknarayan/redis-rs", branch="async-pubsub-hang-fix", default-features = false, features = ["aio", "tokio-comp", "script"] }
tokio = { version = "1", features = ["sync"] }
bertha = { path = "../bertha" }
futures-util = "0.3"
color-eyre = "=0.5.7"
tracing = "0.1"
tracing-futures = "0.2"
bincode = "1"
rand = "0.7"

[dev-dependencies]
test-util = { path = "../test-util" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = "0.2"
tracing-error = "0.1"
